# ChartGridStudy

./: .replit  app.py  learn.py  learnhits.txt  pyproject.toml
draw_history/california/: .keep  california_p3_2022.txt  california_p3_2023.txt  california_p3_2024.txt  california_p3_2025.txt  california_p4_2022.txt  california_p4_2023.txt  california_p4_2024.txt  california_p4_2025.txt
draw_history/florida/: .keep  florida_p3_2022.txt  florida_p3_2023.txt  florida_p3_2024.txt  florida_p3_2025.txt  florida_p4_2022.txt  florida_p4_2023.txt  florida_p4_2024.txt  florida_p4_2025.txt
draw_history/georgia/: .keep  georgia_p3_2022.txt  georgia_p3_2023.txt  georgia_p3_2024.txt  georgia_p3_2025.txt  georgia_p4_2022.txt  georgia_p4_2023.txt  georgia_p4_2024.txt  georgia_p4_2025.txt
draw_history/illinois/: .keep  illinois_p3_2022.txt  illinois_p3_2023.txt  illinois_p3_2024.txt  illinois_p3_2025.txt  illinois_p4_2022.txt  illinois_p4_2023.txt  illinois_p4_2024.txt  illinois_p4_2025.txt
draw_history/new_jersey/: .keep  newjersey_p3_2022.txt  newjersey_p3_2023.txt  newjersey_p3_2024.txt  newjersey_p3_2025.txt  newjersey_p4_2022.txt  newjersey_p4_2023.txt  newjersey_p4_2024.txt  newjersey_p4_2025.txt
draw_history/north_carolina/: .keep  northcarolina_p3_2022.txt  northcarolina_p3_2023.txt  northcarolina_p3_2024.txt  northcarolina_p3_2025.txt  northcarolina_p4_2022.txt  northcarolina_p4_2023.txt  northcarolina_p4_2024.txt  northcarolina_p4_2025.txt
draw_history/ohio/: .keep  ohio_p3_2022.txt  ohio_p3_2023.txt  ohio_p3_2024.txt  (+5 more)
memory/: learned_hits.txt  learnhits.txt
(+32 files in other folders)
